@@ -122,21 +122,21 @@ reg-plot.Rout: reg-plot.R
 	@$(RDIFF) reg-plot.ps $(srcdir)/reg-plot.ps.save $(RVAL_IF_DIFF)
 	@echo "OK"
 
+## allow this to fail, as it must if the locale does not support Latin-1 chars
 reg-plot-latin1.Rout: reg-plot-latin1.R
 	@rm -f $@ $@.fail
+	@echo "running tests of plotting Latin-1 "
+	@echo "  expect failure or some differences if not in a Latin or UTF-8 locale"
 	@echo -n "running code in '$<' ..."
-	@$(R2) < $< > $@ 2>&1 || (mv $@ $@.fail && exit 1)
-	@echo "OK"
-	@if test -f $(srcdir)/$@.save ; then \
-	  mv $@ $@.fail; \
-	  echo "comparing '$@' to '$(srcdir)/$@.save' ..."; \
-	  $(RDIFF) $@.fail $(srcdir)/$@.save $(RVAL_IF_DIFF) || exit 1; \
-	  mv $@.fail $@; \
+	@$(R2) < $< > $@ 2>&1 || mv $@ $@.fail
+	@if test -e $@.fail; then \
+	  echo " FAILED"; \
+	else \
+	  echo " OK"; \
+	  echo -n "  comparing 'reg-plot-latin1.ps' to '$(srcdir)/reg-plot-latin1.ps.save' ..."; \
+	  $(RDIFF) reg-plot-latin1.ps $(srcdir)/reg-plot-latin1.ps.save $(RVAL_IF_DIFF); \
 	  echo "OK"; \
 	fi
-	@echo -n "  comparing 'reg-plot-latin1.ps' to '$(srcdir)/reg-plot-latin1.ps.save' ..."
-	@$(RDIFF) reg-plot-latin1.ps $(srcdir)/reg-plot-latin1.ps.save $(RVAL_IF_DIFF)
-	@echo "OK"
 
 test-all-basics:
 	@for name in $(all-basic-tests); do \
