@@ -1,6 +1,6 @@
 postscript(file = "reg-plot-latin1.ps",
            encoding = "ISOLatin1",
-           width = 7, height = 7)
+           width = 7, height = 7, paper = "a4")
 library(graphics) # to be sure
 example(text)     # has Latin-1 examples
 q("no")
