@@ -143,8 +143,8 @@ NEW FEATURES
     o	sprintf() returns elements of the result in UTF-8 when the
 	format or any character input has a corresponding element
 	declared as UTF-8.  Similarly for paste(), elements of the
-	result in UTF-8 when any input to that element is declared as
-	UTF-8.
+	result are in UTF-8 when any input to that element is declared
+	as UTF-8.
 
 
 PACKAGE INSTALLATION
